- Updated Inbox count to be disabled by default, can be enabled with the filter 'gravityflow_inbox_count_display'.